# computer-vision

./: .dockerignore  .gitignore  README.md  dockerfile  dvc.yaml  params.yaml  pyproject.toml  taskfile.yaml
architecture/after/: .gitignore  docker-compose.yaml  generate_certs.sh  postgres.dockerfile
architecture/after/config/: .gitignore  grafana.conf  meter-115138.conf  meter-15805.conf  meter-18052.conf  meter-50176.conf  meter-7001.conf  modello-cnn3d.conf  mosquitto.conf  nodered.conf  postgres.conf  testclient.conf
architecture/after/config/mosquitto/: acl  mosquitto.conf
architecture/after/config/postgres/: entrypoint.sh  init.sql  ssl-config.sh
architecture/before/: docker-compose.yaml
architecture/before/config/mosquitto/: mosquitto.conf
containers/: docker-compose.yaml  generate_certs.sh
containers/config/mosquitto/: mosquitto.conf
data/1.raw/: ECDUY.dvc
data/2.interim/: .gitignore
data/3.final/: .gitignore
eval/: .gitignore
src/computer_vision/: __init__.py  cli.py  config.py  dataset.py  evaluate.py  export.py  forecast.py  forecasters.py  metrics.py  plot.py  preprocessing.py  test.py  train.py  utils.py
src/computer_vision/model/: cnn3d.py
src/computer_vision/preprocessing/: final.py  interim.py
src/computer_vision/transformer/: cyclical_encoding.py
tests/model/: test_cnn3d.py
