[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.6.0",
    "dvc>=3.66.1",
    "ipykernel>=7.2.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars[rt64]>=1.38.1",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
    "sktime>=0.40.1",
    "statsmodels>=0.14.6",
    "tensorflow[and-cuda]>=2.20.0",
    "tqdm>=4.67.3",
]

[project.scripts]
computer-vision = "computer_vision.cli:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
